<resources>
    <string name="app_name">GUIRegister</string>
    <string name="first_name">First Name</string>
    <string name="your_first_name">Your First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="your_age">Your Age</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="your_email">Your Email Address</string>
</resources>