<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="32dp"
    android:paddingBottom="48dp"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lb_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:paddingHorizontal="4dp"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/edt_first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/lb_last_name"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lb_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:paddingHorizontal="4dp"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/edt_last_name"
        app:layout_constraintLeft_toRightOf="@id/lb_first_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:hint="@string/your_first_name"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/edt_last_name"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_first_name"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:hint="@string/your_last_name"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/edt_first_name"
        app:layout_constraintTop_toBottomOf="@+id/lb_last_name"
        app:layout_constraintBottom_toTopOf="@+id/lb_age"
        android:backgroundTint="#F83A3A"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout"
        android:layout_marginTop="16dp"
        android:layout_marginRight="2dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/lb_age"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toTopOf="@id/lb_email"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/lb_gender"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            />
        <RadioGroup
            android:id="@+id/rdg_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/rd_male"
                android:textSize="18sp"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/rd_female"
                android:textSize="18sp"
                />
        </RadioGroup>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lb_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:paddingHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/edt_age"
        app:layout_constraintLeft_toRightOf="@id/linear_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_last_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:hint="@string/your_age"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/linear_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_age"
        android:inputType="number"
        android:backgroundTint="#F83A3A"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lb_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/linear_layout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_email"
        app:layout_constraintBottom_toTopOf="@+id/lb_new_password"
        android:inputType="textEmailAddress"
        android:backgroundTint="#F83A3A"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lb_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:paddingHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/lb_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lb_confirm_password"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:paddingHorizontal="4dp"
        android:text="@string/confirm_password"
        app:layout_constraintLeft_toRightOf="@id/lb_new_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:hint="@string/new_password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/edt_confirm_password"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_new_password"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:hint="@string/confirm_password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/edt_new_password"
        app:layout_constraintTop_toBottomOf="@+id/lb_confirm_password" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>